Fix body height

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,8 @@
                 <li><a href="#buttons">buttons</a></li>
                 <li><a href="#forms">forms</a></li>
                 <li><a href="#tables">tables</a></li>
-                <li><a href="#article">example article</a></li>
+                <li><a href="#article">example article</a></li> |
+                <li><a href="short.html">short page</a></li>
             </ul>
         </nav>
     </header>
